# ontology-engine

./: .gitignore  .ontology.toml  AGENTS.md  README.md  README.nmd  TODO-pipeline.md  TODO-shacl.md  TODO-sync.txt  TODO-warnings.md  TODO.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.history-memo/: 2026-04-20.md
api/tools/: md_to_rdf.py
cli/: main.py  repl.py
cli/commands/: ai_todo.py  introspect.py  run.py  verify.py
context/: context_builder.py  context_explainer.py  context_pruner.py  databook_chunker.py  databook_selector.py
core/ontology/: core.ttl  dependencies.ttl  task_patterns.ttl  workflow.ttl
core/rules/: rules.ttl
docs/: README.md  project_inventory.md
execution/: llm_executor.py  logical_executor.py  structured_output_executor.py  task_router.py
interaction/: intent_parser.py  interviewer.py  user_feedback.py
introspection/: code_parser.py  doc_parser.py  project_scanner.py  stub_detector.py
ontology_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipeline/: build_context.py  doc_sync.py  event_logger.py  generate_databook.py  git_client.py  graph_updater.py  interview.py  introspect.py  metrics.py  pipeline_orchestrator.py  plan.py  verify.py  visualize.py
planning/: plan_executor.py  task_classifier.py  task_decomposer.py  task_planner.py  task_type_registry.py
requirements/: bootstrap‑requirements.txt
storage/: graph_store.py  id_manager.py
tests/: conftest.py
verification/: shacl_validator.py
visualization/: graph_exporter.py
(+223 files in other folders)
